[package]
name = "cprlib"
version = "0.1.0"
authors = ["pizzacat83 <17941141+pizzacat83@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "=0.2.1"

[dev-dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
